add some fix on mobile ver

--- a/app/scss/modules/_content-section.scss
+++ b/app/scss/modules/_content-section.scss
@@ -22,6 +22,10 @@
 	}
 }
 
+.content-section[data-color="beige"] {
+	background: #FFF9F9;
+}
+
 .title-section {
 	padding: 10px 0;
 	@media (min-width: $width-md) {
