--- a/app/scss/modules/_gallery.scss
+++ b/app/scss/modules/_gallery.scss
@@ -37,6 +37,11 @@
     transition: all .3s ease-in-out;
     cursor: pointer;
     display: block;
+    margin-bottom: 25px;
+
+    @media (min-width: $width-sm) {
+        margin-bottom: 0;
+    }
 
     &::after {
         background: rgba(0, 0, 0, .4);
