--- a/app/scss/modules/_footer.scss
+++ b/app/scss/modules/_footer.scss
@@ -20,13 +20,22 @@
     }
 
     &__logo {
-
+        display: none;
+        @media (min-width: $width-sm) {
+            display: flex;
+        }
     }
     &__menu {
-
+        display: none;
+        @media (min-width: $width-sm) {
+            display: flex;
+        }
     }
     &__contacts {
-        
+        display: none;
+        @media (min-width: $width-sm) {
+            display: flex;
+        }
     }
     &__social {
 
