--- a/app/scss/modules/_header.scss
+++ b/app/scss/modules/_header.scss
@@ -15,7 +15,7 @@
 	    align-items: center;
 	    z-index: 30;
 	   	transition: all .4s ease-out;
-	    @media (min-width: $width-sm) {
+	    @media (min-width: $width-md) {
 			position: static; 
 		}
 		&.contacts-active {
@@ -56,7 +56,7 @@
 		background: url('../images/heroimage.jpg') top center no-repeat;
 		background-size: cover;
 		width: 100%;
-		@media (min-width: $width-sm) {
+		@media (min-width: $width-md) {
 			width: calc(100% - 70px);
 		}
 		&__header {
@@ -78,10 +78,16 @@
 					background: rgba(34, 63, 120, 0.3); 
 				}
 			}
-			@media (min-width: $width-sm) {
+			@media (min-width: $width-md) {
 					justify-content: center;
 					padding: 35px 0;
 			}
+			// &__header.hero-image-content__header--layout.hero-image-content__header--click {
+			// 	ul {
+			// 		height: unset;
+			// 		padding: 10px
+			// 	}
+			// } 
 			& ul {
 				display: flex;
 				flex-direction: column;
@@ -90,34 +96,57 @@
 				z-index: 1;
 				transition: all .4s ease-out;
 				margin-right: auto;
-				margin-left: 35px;
+				margin-left: 25px;
 
 				&.show-navigation {
 					margin-top: -0%;
 				}
-				@media (min-width: $width-sm) {
-					margin: 0 100px;
+				@media (min-width: $width-md) {
+					margin: 0 110px;
 					flex-direction: row;
 					transform: translateY(0);
 				}
+				@media (min-width: $width-lg) {
+					// margin: 0 100px;
+				}
 			}
 			& li:nth-child(2) {
+				margin-bottom: 25px;
 				@media (min-width: $width-sm) {
-					margin: 0 40px;
+					
 				}
 				@media (min-width: $width-md) {
-					margin: 0 100px;
+					margin: 0 35px;
+				}
+				@media (min-width: $width-lg) {
+					margin: 0 50px;
 				}
 			}
 			& li {
 				margin-bottom: 25px;
-				@media (min-width: $width-sm) {
+				@media (min-width: $width-md) {
 					margin-bottom: 0px;
 
 				}
 			}
 			& li > a {
 				color: #fff;
+			}
+
+			& li:last-child {
+				margin-left: 0px;
+				a {
+					display: inline-block;
+				}
+				& > a:first-child {
+					margin-right: 30px;
+				}
+				@media (min-width: $width-md) {
+					margin-left: 70px;
+				}
+				@media (min-width: $width-lg) {
+					margin-left: 120px;
+				}
 			}
 		}
 		&__promo {
