--- a/app/scss/modules/_footer.scss
+++ b/app/scss/modules/_footer.scss
@@ -2,7 +2,7 @@
     padding: 20px;
     background: linear-gradient(360deg, #223F78 -734.78%, #2955AB 100%);
     width: 100%;
-    @include pos($b:0);
+    // @include pos($b:0);
     color: #fff;
     justify-content: space-around;
     align-items: center;
