--- a/app/scss/modules/_footer.scss
+++ b/app/scss/modules/_footer.scss
@@ -2,11 +2,14 @@
     padding: 20px;
     background: linear-gradient(360deg, #223F78 -734.78%, #2955AB 100%);
     width: 100%;
-    // @include pos($b:0);
+    display: flex;
     color: #fff;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+    @media (min-width: $width-sm) {
+        @include pos($b:0, $l:0);
+    }
 
     &, &__menu, &__social, &__contacts {
         display: flex;
